[project]
name = "maimai-timing-align"
version = "0.1.0"
description = "Streamlit app for maimai clip transition alignment and full video export"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "streamlit>=1.45.0",
  "numpy>=2.2.0",
  "opencv-python-headless>=4.11.0.86",
  "scipy>=1.16.0",
  "pandas>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
